--- a/app/client/public/index.html
+++ b/app/client/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <link rel="shortcut icon"
     href="https://res.cloudinary.com/dwpfockn8/image/upload/v1597920848/favicons/favicon-orange_pxfmdc.ico" />
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title>Appsmith</title>
   <style>
